# diglett

./: .gitignore  Dockerfile  README.md  audio.py  client.py  config.py  example.env  pyproject.toml  record.py  requirements.txt  server.py  t_config.py  t_same_person_emb.py  t_stream.py  test_bytes_preproc.py  test_config.py  test_config_file.py  test_record.py  test_same_person_emb.py  test_speaker_embedding.py  test_stream.py  test_vad.py  utils.py
.github/workflows/: python-app.yml
diglett/: audio.py  config.py  main.py  utils.py
example/: client.py
frontend/: index.html  index.js
test/: test_hello_world.py
tests/: test_main.py
tests/data/: emb.json
