[tool.poetry]
name = "diglett"
version = "0.1.0"
description = "Real-time audio streaming server that support speaker verification and sound level detection."
authors = ["8igmac <8igmac@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pyaudio = "^0.2.13"
speechbrain = "^0.5.14"
python-dotenv = "^1.0.0"
torch = "^2.0.1"
torchaudio = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
