[tool.poetry]
name = "diglett"
version = "0.1.0"
description = "Real-time audio streaming server that support speaker verification and sound level detection."
authors = ["8igmac <8igmac@pm.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
speechbrain = "^1.0.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pyaudio = "^0.2.14"
pytest = "^7.4.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
