[tool.poetry]
name = "diglett"
version = "0.1.0"
description = "Real-time audio streaming server that support speaker verification and sound level detection."
authors = ["8igmac <8igmac@pm.me>"]
readme = "README.md"
# Note: Package mode install the project root directory so that
# this project is in Python module search path. We need this 
# for the absoulte import to work.
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
speechbrain = "^1.0.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
pyaudio = "^0.2.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
